BYPS-40: Versuch, die HttpClient-Verbindungen über Refl zu schließen.
Funktioniert nicht, braucht außerdem einen Kommandozeilenparameter.